2012-10-31  Niibe Yutaka  <gniibe@fsij.org>

	* tool/get_raw_public_key.py: New.

2012-10-26  Niibe Yutaka  <gniibe@fsij.org>

	* GNUK_USB_DEVICE_ID (Product_STRING): It's considered better not
	to include vendor name.  Change the name to "Gnuk Token" (was:
	FSIJ USB Token).

2012-10-13  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STBEE_MINI/board.c [!DFU_SUPPORT] (hwinit1): Don't run
	when "user switch" is pushed.  This is for JTAG/SWD debugger.

2012-09-25  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (main): Print out option bytes value.
	Call reset_sys before blank_check.

2012-09-18  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (stlinkv2.option_bytes_erase)
	(stlinkv2.flash_erase_all, stlinkv2.flash_erase_page): : Fix
	OperationFailure (was OperationError).
	(main): Call option_bytes_erase if it's not 0xff.

2012-09-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/sha256.c: Include <stdint.h>.

	* src/sha256.h (SHA256_DIGEST_SIZE, SHA256_BLOCK_SIZE): Move
	from sha256.c.

2012-08-29  Niibe Yutaka  <gniibe@fsij.org>

	* tool/hub_ctrl.py (__main__): Fix to busnum (was: bunum).
	Thanks to Henry Hu.

2012-08-03  Niibe Yutaka  <gniibe@fsij.org>

	* Version 1.0.1.
	* src/usb_desc.c (gnukStringSerial): Updated.
	* src/main.c (ID_OFFSET): Fix.

2012-08-02  Niibe Yutaka  <gniibe@fsij.org>

	* test/gnuk.py (gnuk_token.get_string): New.
	* test/features/991_version_string.feature: New.

2012-07-21  Niibe Yutaka  <gniibe@fsij.org>

	* Version 1.0.
	* src/usb_desc.c (gnukStringSerial): Updated.

	Documentation by Sphinx.
	* doc/Makefile: New.
	* doc/note: Old notes are moved here.

2012-07-20  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/002_get_data_static.feature: Support CERTDO enabled
	Gnuk for the test of extended capabilities.
	* test/features/802_get_data_static.feature: Ditto.
	* test/features/402_get_data_static.feature: Ditto.

2012-07-10  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/*: Add test cases for PW1/PW3 of factory settings.
